# Fortran-Unit-Test-Trivial

./: .gitmodules  AddGitSubmodule.cmake  CMakeLists.txt  LICENSE  README.md  build.x  build_gfortran.sh  build_gfortran.x  build_ifort.sh  build_ifx.sh  comp_file.txt  operators.F90  test_operators.F90
.github/workflows/: main.yml
